--- a/NikoBracket/Base.lproj/Main.storyboard
+++ b/NikoBracket/Base.lproj/Main.storyboard
@@ -417,9 +417,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="uuQ-b5-KQ8">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="uuQ-b5-KQ8">
                                 <rect key="frame" x="0.0" y="88" width="414" height="779"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="Mee-Pd-4l4">
                                     <rect key="frame" x="0.0" y="221" width="414" height="60"/>
@@ -438,9 +437,12 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="154"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ILX-Y8-XRX">
-                                                    <rect key="frame" x="20" y="104" width="374" height="32"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ILX-Y8-XRX">
+                                                    <rect key="frame" x="10" y="104" width="394" height="32"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="394" id="Ls0-Jg-Zwi"/>
+                                                        <constraint firstAttribute="height" constant="31" id="vCj-Sf-ZIm"/>
+                                                    </constraints>
                                                     <segments>
                                                         <segment title=""/>
                                                         <segment title=""/>
@@ -449,45 +451,74 @@
                                                         <action selector="teamSelectAction:" destination="b1l-Er-aVB" eventType="valueChanged" id="rwx-Tf-uRI"/>
                                                     </connections>
                                                 </segmentedControl>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RtZ-pZ-Wu0">
-                                                    <rect key="frame" x="273" y="0.0" width="46" height="46"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RtZ-pZ-Wu0">
+                                                    <rect key="frame" x="288" y="0.0" width="46" height="46"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="46" id="nc9-Ef-JHR"/>
+                                                        <constraint firstAttribute="width" constant="46" id="nhp-E9-dib"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Px1-p0-LKB">
-                                                    <rect key="frame" x="20" y="75" width="180" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Px1-p0-LKB">
+                                                    <rect key="frame" x="82.5" y="70" width="41.5" height="26"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mNi-8n-vSn">
-                                                    <rect key="frame" x="205" y="75" width="189" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mNi-8n-vSn">
+                                                    <rect key="frame" x="290.5" y="70" width="41.5" height="26"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Si-v3-t2o">
-                                                    <rect key="frame" x="87" y="0.0" width="46" height="46"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9Si-v3-t2o">
+                                                    <rect key="frame" x="80" y="0.0" width="46" height="46"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="46" id="AWL-LA-Ah9"/>
+                                                        <constraint firstAttribute="width" constant="46" id="rLW-Vi-dGt"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZFu-nj-8BD">
-                                                    <rect key="frame" x="65" y="51" width="90" height="25"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZFu-nj-8BD">
+                                                    <rect key="frame" x="58" y="51" width="90" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="90" id="KPB-h5-ock"/>
+                                                        <constraint firstAttribute="height" constant="20" id="sBP-g1-DVX"/>
+                                                    </constraints>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="filled" title="Favorite" cornerStyle="capsule">
                                                         <color key="baseBackgroundColor" red="0.12656484879999999" green="0.72315963270000005" blue="0.11821878869999999" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
                                                     </buttonConfiguration>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NW2-fK-zdK">
-                                                    <rect key="frame" x="251" y="51" width="90" height="25"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NW2-fK-zdK">
+                                                    <rect key="frame" x="266" y="51" width="90" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="90" id="MXh-Po-KEv"/>
+                                                        <constraint firstAttribute="height" constant="20" id="Nhk-aE-kbe"/>
+                                                    </constraints>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="filled" title="Favorite" cornerStyle="capsule">
                                                         <color key="baseBackgroundColor" red="0.12656484879999999" green="0.72315963270000005" blue="0.11821878869999999" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
                                                     </buttonConfiguration>
                                                 </button>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="ILX-Y8-XRX" secondAttribute="trailing" constant="10" id="2qR-gN-a3Y"/>
+                                                <constraint firstItem="ZFu-nj-8BD" firstAttribute="top" secondItem="9Si-v3-t2o" secondAttribute="bottom" constant="5" id="BMp-Cu-K0D"/>
+                                                <constraint firstItem="9Si-v3-t2o" firstAttribute="top" secondItem="hs6-aR-tXa" secondAttribute="top" id="EIo-HZ-M69"/>
+                                                <constraint firstItem="ILX-Y8-XRX" firstAttribute="top" secondItem="mNi-8n-vSn" secondAttribute="bottom" constant="8" symbolic="YES" id="F5O-zQ-xd8"/>
+                                                <constraint firstAttribute="trailing" secondItem="RtZ-pZ-Wu0" secondAttribute="trailing" constant="80" id="IyU-pz-Sfi"/>
+                                                <constraint firstItem="Px1-p0-LKB" firstAttribute="top" secondItem="ZFu-nj-8BD" secondAttribute="bottom" constant="-1" id="KW3-7Z-fz7"/>
+                                                <constraint firstItem="RtZ-pZ-Wu0" firstAttribute="top" secondItem="hs6-aR-tXa" secondAttribute="top" id="RfI-oX-2e3"/>
+                                                <constraint firstItem="ZFu-nj-8BD" firstAttribute="centerX" secondItem="Px1-p0-LKB" secondAttribute="centerX" id="Ycw-d1-Z4e"/>
+                                                <constraint firstAttribute="bottom" secondItem="ILX-Y8-XRX" secondAttribute="bottom" constant="19" id="cOd-OZ-Kpv"/>
+                                                <constraint firstItem="9Si-v3-t2o" firstAttribute="centerX" secondItem="ZFu-nj-8BD" secondAttribute="centerX" id="dsw-RF-IcD"/>
+                                                <constraint firstItem="NW2-fK-zdK" firstAttribute="top" secondItem="RtZ-pZ-Wu0" secondAttribute="bottom" constant="5" id="j8M-eo-vpc"/>
+                                                <constraint firstItem="mNi-8n-vSn" firstAttribute="top" secondItem="NW2-fK-zdK" secondAttribute="bottom" constant="-1" id="lDI-63-IVI"/>
+                                                <constraint firstItem="9Si-v3-t2o" firstAttribute="leading" secondItem="hs6-aR-tXa" secondAttribute="leading" constant="80" id="nlJ-zo-A7C"/>
+                                                <constraint firstItem="ILX-Y8-XRX" firstAttribute="top" secondItem="Px1-p0-LKB" secondAttribute="bottom" constant="8" symbolic="YES" id="tz6-qZ-Mir"/>
+                                                <constraint firstItem="NW2-fK-zdK" firstAttribute="centerX" secondItem="mNi-8n-vSn" secondAttribute="centerX" id="whC-cc-eqj"/>
+                                                <constraint firstItem="RtZ-pZ-Wu0" firstAttribute="centerX" secondItem="NW2-fK-zdK" secondAttribute="centerX" id="wl0-08-4ur"/>
+                                                <constraint firstItem="ILX-Y8-XRX" firstAttribute="leading" secondItem="hs6-aR-tXa" secondAttribute="leading" constant="10" id="ygQ-Zz-qVX"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="awayFavoriteIcon" destination="ZFu-nj-8BD" id="QGG-v8-EHD"/>
@@ -504,6 +535,14 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="TQZ-cd-fcF"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="uuQ-b5-KQ8" firstAttribute="trailing" secondItem="TQZ-cd-fcF" secondAttribute="trailing" id="FuP-CO-u33"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="uuQ-b5-KQ8" secondAttribute="bottom" constant="-54" id="Hw6-jM-Rx7"/>
+                            <constraint firstItem="uuQ-b5-KQ8" firstAttribute="leading" secondItem="TQZ-cd-fcF" secondAttribute="leading" id="ILn-ua-OKb"/>
+                            <constraint firstItem="uuQ-b5-KQ8" firstAttribute="top" secondItem="TQZ-cd-fcF" secondAttribute="top" id="eu8-mS-ZpX"/>
+                            <constraint firstItem="uuQ-b5-KQ8" firstAttribute="leading" secondItem="TQZ-cd-fcF" secondAttribute="leading" id="hvn-p6-SpQ"/>
+                            <constraint firstItem="uuQ-b5-KQ8" firstAttribute="top" secondItem="TQZ-cd-fcF" secondAttribute="top" id="ujg-e3-lrU"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="tJI-mS-jQJ">
                         <nil key="title"/>
